tests/ui/fail/access_test.stderr
error[E0624]: method `a` is private
  --> tests/ui/fail/access_test.rs:14:15
   |
6  |         a: B5,
   |         - private method defined here
...
14 |     let _ = c.a();
   |               ^ private method
